--- a/src/stylesheet/main.scss
+++ b/src/stylesheet/main.scss
@@ -1,5 +1,5 @@
-@import './fonts.css';
-@import './normalize.css';
+@import './fonts.scss';
+@import './normalize.scss';
 
 html {
   box-sizing: border-box;
