--- a/src/pages/Home/components/MovieListItem/style.scss
+++ b/src/pages/Home/components/MovieListItem/style.scss
@@ -1,15 +1,25 @@
 .filmContainer {
   display: flex;
-}
-
-.filmTitle {
-  font-size: 20px;
-}
-
-.infoWrapper {
-  display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-height: 70px;
   margin-bottom: 10px;
+}
+
+.trendingListItem {
+  width: 250px;
+
+  border-radius: 32px;
+  padding: 20px 30px;
+  box-shadow: -5px -5px 20px #ffffff,
+    5px 5px 20px var(--secondary-decoration-color);
+  transition: all 0.2s ease-in-out;
+
+  margin-bottom: 40px;
+  margin-right: 40px;
+  background-color: var(--main-decoration-color);
+}
+
+.filmTitle {
+  font-size: 20px;
 }
