--- a/src/pages/Movie/style.scss
+++ b/src/pages/Movie/style.scss
@@ -1,4 +1,50 @@
-.product-card {
+/*.product-container {
+    background-image: linear-gradient(to right, rgba(9.02%, 5.10%, 5.49%, 1.00) 150px, rgba(9.02%, 5.10%, 5.49%, 0.84) 100%);
+    padding: 30px;
+    z-index: 0;
+}
+.wrapper {
     display: flex;
-    justify-content: center;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+.poster-left{
+    min-width: 300px;
+    width: 300px;
+    height: 450px;
+}
+.poster-img {
+    width: 100%;
+    height: 100%;
+    border-radius: 15%;
+}
+.poster-info_container {
+    width: 50%;
+
+}*/
+.product-container {
+    padding: 40px;
+    z-index: 0;
+    background-color: #41483C;
+    // width: 100%;
+    color: #EEEEEE;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 26% 49%;
+}
+.poster-left {
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
+    min-height: 100%;
+}
+
+.poster-img {
+    min-width: 300px;
+    width: 300px;
+    height: 450px;
+    border-radius: 15px;
+    object-fit: contain;
 }
