--- a/src/pages/Movie/style.scss
+++ b/src/pages/Movie/style.scss
@@ -46,5 +46,9 @@
     width: 300px;
     height: 450px;
     border-radius: 15px;
-    object-fit: contain;
+    object-fit: cover;
+    border-radius: 15px;
+}
+.movie-title {
+    margin-bottom: 10%;
 }
