--- a/src/pages/Home/components/MovieListItem/style.scss
+++ b/src/pages/Home/components/MovieListItem/style.scss
@@ -1,25 +1,36 @@
-.filmContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  min-height: 70px;
-  margin-bottom: 10px;
-}
-
-.trendingListItem {
-  width: 250px;
-
-  border-radius: 32px;
+.movieListItem {
+  width: 350px;
+  border-radius: 20px;
   padding: 20px 30px;
   box-shadow: -5px -5px 20px #ffffff,
     5px 5px 20px var(--secondary-decoration-color);
   transition: all 0.2s ease-in-out;
-
   margin-bottom: 40px;
   margin-right: 40px;
   background-color: var(--main-decoration-color);
 }
 
-.filmTitle {
-  font-size: 20px;
+.movieListItem:hover {
+  box-shadow: -2px -2px 5px #ffffff,
+    2px 2px 5px var(--secondary-decoration-color);
+  color: #61677c;
+}
+
+.movieTitle {
+  font-size: 30px;
+  margin-bottom: 10px;
+  color: var(--main-font-color);
+  font-weight: 700;
+}
+
+.movieOverview,
+.moviePic,
+.movieRelease,
+.movieRate {
+  margin-bottom: 10px;
+}
+
+.movieRelease,
+.movieRate {
+  font-weight: 700;
 }
