--- a/src/components/AuthForm/style.scss
+++ b/src/components/AuthForm/style.scss
@@ -1,4 +1,4 @@
-.registerPageContainer {
+.authPageContainer {
   padding: 60px 0;
 }
 
@@ -18,31 +18,31 @@
   align-items: center;
   width: 100%;
 }
-.titleRegister,
-.inputRegister,
+.titleAuth,
+.inputAuth,
 .buttonSubmit {
   font-size: 16px;
 }
-.titleRegister,
-.inputRegister,
+.titleAuth,
+.inputAuth,
 .buttonSubmit {
   // font-family: $font_family_main;
   line-height: 1.2em;
 }
-.inputRegister {
+.inputAuth {
   color: black;
 }
-.titleRegister {
+.titleAuth {
   display: block;
   margin-bottom: 8px;
   margin-right: 20px;
 }
-.inputRegister,
+.inputAuth,
 .buttonSubmit {
   width: 100%;
   height: 44px;
 }
-.inputRegister {
+.inputAuth {
   font-weight: 400;
   border-top: none;
   border-right: none;
@@ -50,7 +50,7 @@
   border-bottom: 1px solid grey;
   padding: 6px 12px 0;
 }
-.inputRegister {
+.inputAuth {
   margin-bottom: 30px;
 }
 .inValid {
