--- a/src/stylesheet/variables.scss
+++ b/src/stylesheet/variables.scss
@@ -5,4 +5,5 @@
   --secondary-decoration-color: #ccd8c7;
   --third-decoration-color: #eeeeee;
   --main-font-color: #41483c;
+  --error-color: rgb(190, 1, 1);
 }
