--- a/src/stylesheet/variables.scss
+++ b/src/stylesheet/variables.scss
@@ -5,5 +5,6 @@
   --secondary-decoration-color: #ccd8c7;
   --third-decoration-color: #eeeeee;
   --main-font-color: #41483c;
+  --secondary-accent-color: #dad870;
   --error-color: rgb(190, 1, 1);
 }
