--- a/src/pages/Movie/style.scss
+++ b/src/pages/Movie/style.scss
@@ -1,27 +1,3 @@
-/*.product-container {
-    background-image: linear-gradient(to right, rgba(9.02%, 5.10%, 5.49%, 1.00) 150px, rgba(9.02%, 5.10%, 5.49%, 0.84) 100%);
-    padding: 30px;
-    z-index: 0;
-}
-.wrapper {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-}
-.poster-left{
-    min-width: 300px;
-    width: 300px;
-    height: 450px;
-}
-.poster-img {
-    width: 100%;
-    height: 100%;
-    border-radius: 15%;
-}
-.poster-info_container {
-    width: 50%;
-
-}*/
 .product-container {
     padding: 40px;
     z-index: 0;
@@ -32,7 +8,9 @@
 
 .wrapper {
     display: grid;
-    grid-template-columns: 26% 49%;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-rows: repeat(auto-fill, minmax(230px, 1fr));
+    gap: 35px;
 }
 .poster-left {
     width: 100%;
@@ -49,6 +27,46 @@
     object-fit: cover;
     border-radius: 15px;
 }
+
 .movie-title {
-    margin-bottom: 10%;
+    margin-bottom: 18px;
+}
+
+.product-card {
+    background-color: #FCC931;
+    padding: 30px;
+    border-radius: 15px;
+}
+
+.movie-descr {
+    margin-top: 25px;
+}
+
+.overview-content-dynamic {
+    padding-top: 10px;
+}
+
+    
+.btn {
+    padding: 10px;
+    border-radius: 17px;
+    background: #41483C;
+    margin: 10px;
+}
+
+.delete, .edit {
+    border: none;
+    color: #FCC931;
+    background-color: transparent;
+}
+
+.movie-action {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 50%;
+}
+
+.release-day {
+    margin-bottom: 10px;
 }
