--- a/src/pages/Home/components/MovieList/style.scss
+++ b/src/pages/Home/components/MovieList/style.scss
@@ -1,8 +1,8 @@
 .filmContainer {
   display: flex;
-  //   flex-direction: column;
   justify-content: space-between;
   min-height: 70px;
   margin-bottom: 10px;
   flex-wrap: wrap;
+  padding-left: 40px;
 }
