--- a/src/components/Navigation/styles.scss
+++ b/src/components/Navigation/styles.scss
@@ -29,9 +29,9 @@
   padding: 20px;
   width: 100%;
   background-color: var(--main-decoration-color);
-  -moz-box-shadow: 3px 3px 5px 6px #ccc;
-  -webkit-box-shadow: 3px 3px 5px 6px #ccc;
-  box-shadow: 3px 3px 5px 6px #ccc;
+  // -moz-box-shadow: 3px 3px 5px 6px #ccc;
+  // -webkit-box-shadow: 3px 3px 5px 6px #ccc;
+  // box-shadow: 3px 3px 5px 6px #ccc;
   margin-bottom: 20px;
 }
 
