--- a/src/pages/Home/components/MovieListItem/style.scss
+++ b/src/pages/Home/components/MovieListItem/style.scss
@@ -4,15 +4,15 @@
   padding: 20px 30px;
   box-shadow: -5px -5px 20px #ffffff,
     5px 5px 20px var(--secondary-decoration-color);
-  transition: all 0.2s ease-in-out;
+  // transition: all 0.2s ease-in-out;
   margin-bottom: 40px;
   margin-right: 40px;
   background-color: var(--main-decoration-color);
 }
 
 .movieListItem:hover {
-  box-shadow: -2px -2px 5px #ffffff,
-    2px 2px 5px var(--secondary-decoration-color);
+  // box-shadow: -2px -2px 5px #ffffff,
+  //   2px 2px 5px var(--secondary-decoration-color);
   color: #61677c;
 }
 
@@ -34,3 +34,5 @@
 .movieRate {
   font-weight: 700;
 }
+
+
