--- a/src/components/Navigation/styles.scss
+++ b/src/components/Navigation/styles.scss
@@ -33,6 +33,7 @@
   // -webkit-box-shadow: 3px 3px 5px 6px #ccc;
   // box-shadow: 3px 3px 5px 6px #ccc;
   margin-bottom: 20px;
+  position: fixed;
 }
 
 .auth {
