--- a/src/pages/Home/components/MovieList/style.scss
+++ b/src/pages/Home/components/MovieList/style.scss
@@ -1,12 +1,3 @@
-// .filmContainer {
-//   display: flex;
-//   //   flex-direction: column;
-//   justify-content: space-between;
-//   min-height: 70px;
-//   margin-bottom: 10px;
-//   flex-wrap: wrap;
-// }
-
 .filmContainer {
   display: flex;
   justify-content: space-between;
@@ -14,4 +5,5 @@
   margin-bottom: 10px;
   flex-wrap: wrap;
   padding-left: 40px;
+  padding-top: 120px;
 }
