--- a/src/pages/Home/components/MovieListItem/style.scss
+++ b/src/pages/Home/components/MovieListItem/style.scss
@@ -1,5 +1,6 @@
 .movieListItem {
   width: 350px;
+  min-height: 700px;
   border-radius: 20px;
   padding: 20px 30px;
   box-shadow: -5px -5px 20px #ffffff,
@@ -34,5 +35,3 @@
 .movieRate {
   font-weight: 700;
 }
-
-
