--- a/src/components/Navigation/styles.scss
+++ b/src/components/Navigation/styles.scss
@@ -25,6 +25,14 @@
   }
 }
 
+.logoContainer {
+  display: flex;
+  flex-direction: row;
+  width: 20%;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .container {
   padding: 20px;
   width: 100%;
