--- a/src/pages/Movie/style.scss
+++ b/src/pages/Movie/style.scss
@@ -1,72 +1,74 @@
 .product-container {
-    padding: 40px;
-    z-index: 0;
-    background-color: #41483C;
-    // width: 100%;
-    color: #EEEEEE;
+  padding: 40px;
+  padding-top: 150px;
+  height: 100vh;
+  z-index: 0;
+  background-color: #41483c;
+  // width: 100%;
+  color: #eeeeee;
 }
 
 .wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    grid-template-rows: repeat(auto-fill, minmax(230px, 1fr));
-    gap: 35px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(230px, 1fr));
+  gap: 35px;
 }
 .poster-left {
-    width: 100%;
-    min-width: 100%;
-    height: 100%;
-    min-height: 100%;
+  width: 100%;
+  min-width: 100%;
+  height: 100%;
+  min-height: 100%;
 }
 
 .poster-img {
-    min-width: 300px;
-    width: 300px;
-    height: 450px;
-    border-radius: 15px;
-    object-fit: cover;
-    border-radius: 15px;
+  min-width: 300px;
+  width: 300px;
+  height: 450px;
+  border-radius: 15px;
+  object-fit: cover;
+  border-radius: 15px;
 }
 
 .movie-title {
-    margin-bottom: 18px;
+  margin-bottom: 18px;
 }
 
 .product-card {
-    background-color: #FCC931;
-    padding: 30px;
-    border-radius: 15px;
+  background-color: #fcc931;
+  padding: 30px;
+  border-radius: 15px;
 }
 
 .movie-descr {
-    margin-top: 25px;
+  margin-top: 25px;
 }
 
 .overview-content-dynamic {
-    padding-top: 25px;
+  padding-top: 25px;
 }
 
-    
 .btn {
-    padding: 10px;
-    border-radius: 17px;
-    background: #41483C;
-    margin: 10px;
+  padding: 10px;
+  border-radius: 17px;
+  background: #41483c;
+  margin: 10px;
 }
 
-.delete, .edit {
-    border: none;
-    color: #FCC931;
-    background-color: transparent;
+.delete,
+.edit {
+  border: none;
+  color: #fcc931;
+  background-color: transparent;
 }
 
 .movie-action {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 50%;
 }
 
 .release-day {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
